--- a/server/.env
+++ b/server/.env
@@ -34,14 +34,14 @@ DB_NAME=catelli
 
 
 SERVER1_USER=sa
-SERVER1_PASS=eli112910
-SERVER1_HOST=10.0.11.232
+SERVER1_PASS="Mercedes@262"
+SERVER1_HOST=10.0.10.121
 SERVER1_DB=EXACTUS
 
-SERVER2_USER=sa
-SERVER2_PASS=eli112910
-SERVER2_HOST=10.0.11.232
-SERVER2_DB=TELYNET
+SERVER2_USER=cliente-catelli
+SERVER2_PASS="Smk1$kE[qVc%5fY"
+SERVER2_HOST=sql-calidad.miami\calidadstdb
+SERVER2_DB=stdb_gnd
 
 
 #
