modificando cnn al servidor

--- a/server/.env
+++ b/server/.env
@@ -40,7 +40,8 @@ SERVER1_DB=EXACTUS
 
 SERVER2_USER=cliente-catelli
 SERVER2_PASS="Smk1$kE[qVc%5fY"
-SERVER2_HOST=sql-calidad.miami\calidadstdb
+SERVER2_HOST=sql-calidad.miami
+SERVER2_INSTANCE=calidadstdb
 SERVER2_DB=stdb_gnd
 
 
