--- a/.gitignore
+++ b/.gitignore
@@ -18,4 +18,4 @@ build/              # Excluye la carpeta de construcción
 
 
 /server/logs/       # no cargas los logs
-/server/node_modules/ #no carga modules 
+/server/node_modules/ #no carga modules server/logs/combined.log
