--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ build/              # Excluye la carpeta de construcción
 
 /server/logs/       # no cargas los logs
 /server/node_modules/ #no carga modules server/logs/combined.log
+server/logs/error.log
