--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@ build/              # Excluye la carpeta de construcción
 *.swp               # Archivos temporales de Vim
 
 
-/server/logs/       # no cargas los logs
-/server/node_modules/ #no carga modules server/logs/combined.log
+server/logs/       # no cargas los logs
+server/node_modules/ #no carga modules 
+server/logs/combined.log
 server/logs/error.log
+
