comenzamos con el frontend en reactjs

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,8 @@ server/node_modules/ #no carga modules
 server/logs/combined.log
 server/logs/error.log
 
+app/core_app/node_modules/ #no carga modules 
+#app/core_app/node_modules/ #no carga modules 
+app/core_app/build/ #no carga modules 
+app/core_app/dist/ #no carga modules 
+
