vamos al mambo2

--- a/server/.env
+++ b/server/.env
@@ -46,16 +46,16 @@ SERVER1_PASS="Mercedes@262"
 SERVER1_HOST=10.0.10.120
 SERVER1_DB=EXACTUS
 
-SERVER2_USER=sa
-SERVER2_PASS="Mercedes@262"
-SERVER2_HOST=10.0.10.120
-SERVER2_DB=TELYNET
+# SERVER2_USER=sa
+# SERVER2_PASS="Mercedes@262"
+# SERVER2_HOST=10.0.10.120
+# SERVER2_DB=TELYNET
 
-# SERVER2_USER=cliente-catelli
-# SERVER2_PASS="Smk1$kE[qVc%5fY"
-# SERVER2_HOST=sql-calidad.miami
-# SERVER2_INSTANCE=calidadstdb
-# SERVER2_DB=stdb_gnd
+SERVER2_USER=cliente-catelli
+SERVER2_PASS="Smk1$kE[qVc%5fY"
+SERVER2_HOST=sql-calidad.miami
+SERVER2_INSTANCE=calidadstdb
+SERVER2_DB=stdb_gnd
 
 # {
 #     serverName: "server2",
