configuracion mas detallada de tedious

--- a/server/.env
+++ b/server/.env
@@ -1,78 +1,68 @@
-
-
 # Entorno
-NODE_ENV=development
+NODE_ENV=production #development
 
 # Puerto
 PORT=3979
 
+# API versión
+API_VERSION=v1
+
+# Modo servidor (http o https)
+SERVER_MODE=https
+
+# SSL (solo para HTTPS en producción)
+SSL_KEY_PATH=/etc/letsencrypt/live/catelli.ddns.net/privkey.pem
+SSL_CERT_PATH=/etc/letsencrypt/live/catelli.ddns.net/fullchain.pem
+SSL_CA_PATH=/etc/letsencrypt/live/catelli.ddns.net/chain.pem
+
 # MongoDB
-#MONGO_URI=mongodb://localhost:27017/core_app
+DB_USER=heriberto777
+DB_PASS=eli112910
+DB_PORT=27017
+DB_HOST=localhost
+DB_NAME=core_app
+# Opcional: URI completo (tiene prioridad si está definido)
+# MONGO_URI=mongodb://heriberto777:eli112910@localhost:27017/core_app
 
 # JWT
-JWT_SECRET="HG3y$obesey@vqtvja+nsf7xvbe2u&0#&!bift=1%g(al=z7k$w%EG";
+JWT_SECRET="HG3y$obesey@vqtvja+nsf7xvbe2u&0#&!bift=1%g(al=z7k$w%EG"
 
 # Email
-EMAIL_USER=tu_correo@example.com
-EMAIL_PASS=tu_contraseña
-
-# Configuración de correo
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USER=info@catelli.net
 EMAIL_PASS='Catelli#2023'
 EMAIL_FROM=info@catelli.net
 
-# Conexion MongoDB
-API_VERSION = "v1";
-# IP_SERVER = "127.0.0.1";
-# PORT_DB = 27017;
-# USERNAME = "heriberto777";
-# PASSWORD = "eli112910";F
-
-
-
-#Configuracion de Base de datos
-DB_USER=heriberto777
-DB_PASS=eli112910
-DB_PORT = 27017
-DB_HOST=localhost
-DB_NAME=core_app
-
-
+# SQL Server 1 (Exactus)
 SERVER1_USER=sa
 SERVER1_PASS="Mercedes@262"
 SERVER1_HOST=10.0.10.120
 SERVER1_DB=EXACTUS
+SERVER1_INSTANCE=
+SERVER1_PORT=1433
+SERVER1_ENCRYPT=false
+SERVER1_TRUST_SERVER_CERT=true
 
-#SERVER2_USER=sa
-#SERVER2_PASS="Mercedes@262"
-#SERVER2_HOST=10.0.10.120
-#SERVER2_DB=TELYNET
-
+# SQL Server 2 (TELYNET/stdb_gnd)
 SERVER2_USER=cliente-catelli
 SERVER2_PASS="Smk1$kE[qVc%5fY"
 SERVER2_HOST=sql-calidad.miami
 SERVER2_INSTANCE=calidadstdb
 SERVER2_DB=stdb_gnd
+SERVER2_PORT=1433
+SERVER2_ENCRYPT=true
+SERVER2_TRUST_SERVER_CERT=true
 
-# {
-#     serverName: "server2",
-#     user: "cliente-catelli",
-#     password: "Smk1$kE[qVc%5fY",
-#     server: "sql-calidad.miami",
-#     instance: "calidadstdb",
-#     database: "stdb_gnd",
-#     options: {
-#       encrypt: true,
-#       trustServerCertificate: true,
-#       enableArithAbort: true
-#     }
+# Debug
+#DEBUG=ioredis:*
+# Para depurar tedious añade:
+# DEBUG=${DEBUG},tedious:*
 
+# Configuración de reintentos
+RETRY_ATTEMPTS=3
+RETRY_DELAY=5000
 
-
-#
-API_VERSION=v1
-
-process.env.DEBUG = "ioredis:*";
-
+# Configuración de lotes
+BATCH_SIZE=100
+INSERT_BATCH_SIZE=50
