--- a/server/.env
+++ b/server/.env
@@ -66,3 +66,6 @@ RETRY_DELAY=5000
 # Configuración de lotes
 BATCH_SIZE=100
 INSERT_BATCH_SIZE=50
+
+SQL_CONNECTION_TIMEOUT=10000
+SQL_REQUEST_TIMEOUT=30000
