pasado develop to production

--- a/server/.env
+++ b/server/.env
@@ -22,7 +22,7 @@ DB_PORT=27017
 DB_HOST=localhost
 DB_NAME=core_app
 # Opcional: URI completo (tiene prioridad si está definido)
-# MONGO_URI=mongodb://heriberto777:eli112910@localhost:27017/core_app
+MONGO_URI=mongodb://heriberto777:eli112910@localhost:27017/core_app
 
 # JWT
 JWT_SECRET="HG3y$obesey@vqtvja+nsf7xvbe2u&0#&!bift=1%g(al=z7k$w%EG"
@@ -37,7 +37,7 @@ EMAIL_FROM=info@catelli.net
 # SQL Server 1 (Exactus)
 SERVER1_USER=sa
 SERVER1_PASS="Mercedes@262"
-SERVER1_HOST=10.0.10.120
+SERVER1_HOST=EXACTUSSERVER
 SERVER1_DB=EXACTUS
 SERVER1_INSTANCE=
 SERVER1_PORT=1433
