areeglo tipo de conexion tedious

--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 # Entorno
-NODE_ENV=production #development
+NODE_ENV=production
 
 # Puerto
 PORT=3979
@@ -22,7 +22,7 @@ DB_PORT=27017
 DB_HOST=localhost
 DB_NAME=core_app
 # Opcional: URI completo (tiene prioridad si está definido)
-MONGO_URI=mongodb://heriberto777:eli112910@localhost:27017/core_app
+# MONGO_URI=mongodb://heriberto777:eli112910@localhost:27017/core_app
 
 # JWT
 JWT_SECRET="HG3y$obesey@vqtvja+nsf7xvbe2u&0#&!bift=1%g(al=z7k$w%EG"
@@ -37,10 +37,9 @@ EMAIL_FROM=info@catelli.net
 # SQL Server 1 (Exactus)
 SERVER1_USER=sa
 SERVER1_PASS="Mercedes@262"
-SERVER1_HOST=EXACTUSSERVER
+SERVER1_HOST=10.0.10.120
 SERVER1_DB=EXACTUS
-SERVER1_INSTANCE=
-SERVER1_PORT=1433
+# SERVER1_INSTANCE=  # Dejar vacío si no usa instance name
 SERVER1_ENCRYPT=false
 SERVER1_TRUST_SERVER_CERT=true
 
@@ -50,14 +49,11 @@ SERVER2_PASS="Smk1$kE[qVc%5fY"
 SERVER2_HOST=sql-calidad.miami
 SERVER2_INSTANCE=calidadstdb
 SERVER2_DB=stdb_gnd
-SERVER2_PORT=1433
 SERVER2_ENCRYPT=true
 SERVER2_TRUST_SERVER_CERT=true
 
 # Debug
-#DEBUG=ioredis:*
-# Para depurar tedious añade:
-# DEBUG=${DEBUG},tedious:*
+# DEBUG=ioredis:*,tedious:*
 
 # Configuración de reintentos
 RETRY_ATTEMPTS=3
@@ -66,6 +62,3 @@ RETRY_DELAY=5000
 # Configuración de lotes
 BATCH_SIZE=100
 INSERT_BATCH_SIZE=50
-
-SQL_CONNECTION_TIMEOUT=10000
-SQL_REQUEST_TIMEOUT=30000
