--- a/server/package.json
+++ b/server/package.json
@@ -26,12 +26,14 @@
     "express": "^4.21.2",
     "ioredis": "^5.4.2",
     "jsonwebtoken": "^9.0.2",
+    "handlebars": "^4.7.8",
     "moment": "^2.30.1",
     "mongoose": "^8.9.5",
     "mongoose-paginate-v2": "^1.9.0",
     "mssql": "^9.3.2",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.16",
+    "puppeteer": "^21.3.6",
     "tedious": "^18.6.1",
     "winston": "^3.17.0"
   },
