Logica de stdb y logs, historial

--- a/server/.env
+++ b/server/.env
@@ -45,13 +45,22 @@ SERVER1_TRUST_SERVER_CERT=true
 SERVER1_PORT=1433
 
 # SQL Server 2 (TELYNET/stdb_gnd)
-SERVER2_USER=cliente-catelli
-SERVER2_PASS="Smk1$kE[qVc%5fY"
-SERVER2_HOST=sql-calidad.miami
-SERVER2_INSTANCE=calidadstdb
-SERVER2_DB=stdb_gnd
+SERVER2_USER=sa
+SERVER2_PASS="Mercedes@262"
+SERVER2_HOST=10.0.10.120
+# SERVER2_INSTANCE=null
+SERVER2_DB=TELYNET
 SERVER2_ENCRYPT=true
 SERVER2_TRUST_SERVER_CERT=true
+
+
+# SERVER2_USER=cliente-catelli
+# SERVER2_PASS="Smk1$kE[qVc%5fY"
+# SERVER2_HOST=sql-calidad.miami
+# SERVER2_INSTANCE=calidadstdb
+# SERVER2_DB=stdb_gnd
+# SERVER2_ENCRYPT=true
+# SERVER2_TRUST_SERVER_CERT=true
 
 # Debug
 # DEBUG=ioredis:*,tedious:*
