--- a/app/core_app/package.json
+++ b/app/core_app/package.json
@@ -13,11 +13,13 @@
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-datepicker": "^8.2.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
     "react-switch": "^7.1.0",
+    "recharts": "^2.15.2",
     "styled-components": "^6.1.14",
     "sweetalert2": "^11.15.10",
     "sweetalert2-react-content": "^5.1.0"
