--- a/app/core_app/package.json
+++ b/app/core_app/package.json
@@ -22,7 +22,8 @@
     "recharts": "^2.15.2",
     "styled-components": "^6.1.14",
     "sweetalert2": "^11.15.10",
-    "sweetalert2-react-content": "^5.1.0"
+    "sweetalert2-react-content": "^5.1.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
