nuevos formato de transferir server2 hacia server1

--- a/server/.env
+++ b/server/.env
@@ -49,7 +49,7 @@ SERVER1_PORT=1433
 # SERVER2_PASS="Mercedes@262"
 # SERVER2_HOST=10.0.10.120
 # # SERVER2_INSTANCE=null
-# SERVER2_DB=TELYNET
+# SERVER2_DB=EXACTUS
 # SERVER2_ENCRYPT=true
 # SERVER2_TRUST_SERVER_CERT=true
 
