--- a/app/core_app/package.json
+++ b/app/core_app/package.json
@@ -16,6 +16,7 @@
     "react-datepicker": "^8.2.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
     "react-switch": "^7.1.0",
