logger, definiendo logica mejorada y ENV

--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,11 @@
 # Entorno
 NODE_ENV=production
 
+# Información del servicio
+SERVICE_NAME=transfer-control
+NODE_ENV=development
+npm_package_version=1.0.0
+
 # Puerto
 PORT=3979
 
@@ -14,6 +19,8 @@ SERVER_MODE=https
 SSL_KEY_PATH=/etc/letsencrypt/live/catelli.ddns.net/privkey.pem
 SSL_CERT_PATH=/etc/letsencrypt/live/catelli.ddns.net/fullchain.pem
 SSL_CA_PATH=/etc/letsencrypt/live/catelli.ddns.net/chain.pem
+
+DISABLE_MONGO_LOGS=false
 
 # MongoDB
 DB_USER=heriberto777
@@ -45,21 +52,21 @@ SERVER1_TRUST_SERVER_CERT=true
 SERVER1_PORT=1433
 
 # SQL Server 2 (TELYNET/stdb_gnd)
-# SERVER2_USER=sa
-# SERVER2_PASS="Mercedes@262"
-# SERVER2_HOST=10.0.10.120
-# # SERVER2_INSTANCE=null
-# SERVER2_DB=EXACTUS
-# SERVER2_ENCRYPT=true
-# SERVER2_TRUST_SERVER_CERT=true
-
-SERVER2_USER=cliente-catelli
-SERVER2_PASS="Smk1$kE[qVc%5fY"
-SERVER2_HOST=sql-calidad.miami
-SERVER2_INSTANCE=calidadstdb
-SERVER2_DB=stdb_gnd
+SERVER2_USER=sa
+SERVER2_PASS="Mercedes@262"
+SERVER2_HOST=10.0.10.120
+SERVER2_INSTANCE=null
+SERVER2_DB=EXACTUS
 SERVER2_ENCRYPT=true
 SERVER2_TRUST_SERVER_CERT=true
+
+# SERVER2_USER=cliente-catelli
+# SERVER2_PASS="Smk1$kE[qVc%5fY"
+# SERVER2_HOST=sql-calidad.miami
+# SERVER2_INSTANCE=calidadstdb
+# SERVER2_DB=stdb_gnd
+# SERVER2_ENCRYPT=true
+# SERVER2_TRUST_SERVER_CERT=true
 
 # Debug
 # DEBUG=ioredis:*,tedious:*
@@ -71,3 +78,11 @@ RETRY_DELAY=5000
 # Configuración de lotes
 BATCH_SIZE=100
 INSERT_BATCH_SIZE=50
+
+# Nivel general de logs
+LOG_LEVEL=info
+
+# Niveles específicos por transporte
+CONSOLE_LOG_LEVEL=debug
+FILE_LOG_LEVEL=info
+MONGO_LOG_LEVEL=info
